# RustEventSourcingCQRS

./: Cargo.toml  README.md
backend/docker/: docker-compose.yml
backend/src/: command.rs  command_handler.rs  query.rs  request.rs  stock_event.rs
frontend/: angular.json  package-lock.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/app/layout/: app.layout.module.ts  app.topbar.component.ts
frontend/src/dashboard/: dashboard.component.html  dashboard.component.ts
src/: command.rs  command_handler.rs  main.rs  query.rs  request.rs  stock_event.rs
