[package]
name = "EventRust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "command"
path = "src/command.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "command_handler"
path = "src/command_handler.rs"

[dependencies]
eventstore = "2.3.0"
serde = "1.0.193"
tokio = { version = "1.35.1", features = ["full"] }
uuid = "1.6.1"
futures = "0.3.29"
actix-web = "4.4.0"
serde_json = "1.0.108"

# tokio-runtim is optional
[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
