[package]
name = "EventRust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "command"
path = "src/command.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "command_handler"
path = "src/command_handler.rs"

[dependencies]
eventstore = "3.0.0"
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["full"] }
uuid = "1.8.0"
futures = "0.3.30"
actix-web = "4.5.1"
serde_json = "1.0.116"

# tokio-runtim is optional
[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
