[package]
name = "EventRust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "command"
path = "src/command.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "command_handler"
path = "src/command_handler.rs"

[dependencies]
eventstore = "3.0.0"
serde = "1.0.208"
tokio = { version = "1.39.3", features = ["full"] }
uuid = "1.10.0"
futures = "0.3.30"
actix-web = "4.9.0"
serde_json = "1.0.125"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.mongodb]
version = "3.0.1"
